--- a/v3/authentication/index.html
+++ b/v3/authentication/index.html
@@ -50,6 +50,7 @@
         <h1>Introduction</h1>
         <ul>
           <li><a href="/">Overview</a><span class="icon-arrow-right"></span></li>
+          <li><a href="/v3/authentication/">V3 Authentication</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/authentication/">V1 Authentication</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/errors/">Errors</a><span class="icon-arrow-right"></span></li>
         </ul>
@@ -59,9 +60,14 @@
           <li><a href="/v1/quick_start/">Quick Start</a><span class="icon-arrow-right"></span></li>
         </ul>
 
+        <h1>V3 Core Calls</h1>
+        <ul>
+          <li><a href="/v3/get_deals/">Get Deals</a><span class="icon-arrow-right"></span></li>
+        </ul>
+
         <h1>V1 Core Calls</h1>
         <ul>
-          <li><a href="/v1/get_deals/">Get Deals</a><span class="icon-arrow-right"></span></li>
+          <li><a href="/v1/get_deals/">Get Deals(Deprecated)</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/full_purchase/">Execute Purchases</a><span class="icon-arrow-right"></span></li>
         </ul>
 
@@ -69,9 +75,11 @@
         <ul>
           <li><a href="/v1/adunits/">Ad Units</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/deals/">Deals</a><span class="icon-arrow-right"></span></li>
+          <li><a href="/v3/deals/">Deals</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/purchases/">Purchases</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/regions/">Regions</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/regions/deals/">Region Deals</a><span class="icon-arrow-right"></span></li>
+          <li><a href="/v3/regions/deals/">V3 Region Deals</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/users/">Users</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/users/access_tokens/">User Access Tokens</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/users/card_links/">User Card Links</a><span class="icon-arrow-right"></span></li>
@@ -87,7 +95,6 @@
 
         <h1>V3 Additional Calls</h1>
         <ul>
-          <li><a href="/v3/authentication/">V3 Authentication</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v3/resellers/purchases/">Reseller Purchases</a><span class="icon-arrow-right"></span></li>
         </ul>
       </nav>
@@ -107,12 +114,12 @@ unique API username &amp; password with each request. <b>You must keep your uniq
 
 <h2 id="request">Request</h2>
 
-<pre><code>POST https://&lt;username&gt;:&lt;password&gt;@api.offers.deem.com/v3/resellers/purchases
+<pre><code>POST https://&lt;username&gt;:&lt;password&gt;@api.offers.deem.com/api/v3/resellers/purchases
 </code></pre>
 
 <h2 id="request-example">Request Example</h2>
 
-<pre><code>POST https://abcd1234:La20wWgtT0PC@api.offers.deem.com/v3/resellers/purchases?deal_id=some_deal&amp;...
+<pre><code>POST https://abcd1234:La20wWgtT0PC@api.offers.deem.com/api/v3/resellers/purchases?deal_id=some_deal&amp;...
 </code></pre>
       </div>
 
@@ -141,7 +148,7 @@ unique API username &amp; password with each request. <b>You must keep your uniq
           <li><a href="mailto:needhelp@deem">Feedback</a></li>
         </ul>
       </nav>
-      <p>&copy; 1999-2013 Rearden Commerce, Inc. All rights reserved.</p>
+      <p>&copy; 1999-2014 Deem, Inc. All rights reserved.</p>
     </div>
 </footer>
 
