--- a/v3/resellers/purchases/index.html
+++ b/v3/resellers/purchases/index.html
@@ -134,7 +134,8 @@ be used if the transaction is completely managed by the third party.</p>
   <li>first_name</li>
   <li>last_name</li>
   <li>address_type</li>
-  <li>address_one</li>
+  <li>address1</li>
+  <li>address2</li>
   <li>postal_code</li>
   <li>city</li>
   <li>state</li>
@@ -235,7 +236,7 @@ though they may have little to no meaning for some requests.</p>
   <span class="s2">"transaction_reference"</span><span class="o">:</span> <span class="s2">"trans1234"</span><span class="p">,</span>
   <span class="s2">"first_name"</span><span class="o">:</span> <span class="s2">"Hank"</span><span class="p">,</span>
   <span class="s2">"last_name"</span><span class="o">:</span> <span class="s2">"Rearden"</span><span class="p">,</span>
-  <span class="s2">"address_name"</span><span class="o">:</span> <span class="s2">"Home"</span><span class="p">,</span>
+  <span class="s2">"address_type"</span><span class="o">:</span> <span class="s2">"Home"</span><span class="p">,</span>
   <span class="s2">"address1"</span><span class="o">:</span> <span class="s2">"123 Any St."</span><span class="p">,</span>
   <span class="s2">"address2"</span><span class="o">:</span> <span class="s2">"Suite 100"</span><span class="p">,</span>
   <span class="s2">"postal_code"</span><span class="o">:</span> <span class="s2">"12345"</span><span class="p">,</span>
