--- a/v3/resellers/purchases/index.html
+++ b/v3/resellers/purchases/index.html
@@ -322,9 +322,9 @@ though they may have little to no meaning for some requests.</p>
       <span class="s2">"resource"</span><span class="o">:</span> <span class="s2">"deal"</span>
     <span class="p">},</span>
     <span class="p">{</span>
-      <span class="s2">"type"</span><span class="o">:</span> <span class="s2">"invalid"</span><span class="p">,</span>
-      <span class="s2">"message"</span><span class="o">:</span> <span class="s2">"code is invalid"</span><span class="p">,</span>
-      <span class="s2">"field"</span><span class="o">:</span> <span class="s2">"postal_code"</span><span class="p">,</span>
+      <span class="s2">"type"</span><span class="o">:</span> <span class="s2">"missing_field"</span><span class="p">,</span>
+      <span class="s2">"message"</span><span class="o">:</span> <span class="s2">"address_type is required"</span><span class="p">,</span>
+      <span class="s2">"field"</span><span class="o">:</span> <span class="s2">"address_type"</span><span class="p">,</span>
       <span class="s2">"resource"</span><span class="o">:</span> <span class="s2">"shipping_address"</span>
     <span class="p">}</span>
   <span class="p">]</span>
