--- a/v3/resellers/coupons/index.html
+++ b/v3/resellers/coupons/index.html
@@ -109,7 +109,7 @@
 
 <p>Endpoint for a third party reseller to check the status of a coupon.</p>
 
-<pre><code>POST https://&lt;username&gt;:&lt;password&gt;@api.offers.deem.com/api/v3/coupons/:coupon_id
+<pre><code>GET https://&lt;username&gt;:&lt;password&gt;@api.offers.deem.com/api/v3/coupons/:coupon_id
 </code></pre>
 
 <h3 id="response">Response</h3>
