--- a/v1/get_deals/index.html
+++ b/v1/get_deals/index.html
@@ -458,6 +458,9 @@
   <dt>supplier_id</dt>
   <dd>
 <em>String</em> The slug for the deal’s sourcing supplier</dd>
+  <dt>tags</dt>
+  <dd>
+<em>Array</em> An array of the tags associated with this deal</dd>
   <dt>title</dt>
   <dd>
 <em>String</em> Title of the purchased deal</dd>
@@ -651,6 +654,10 @@
       <span class="s2">"subcategory"</span><span class="o">:</span> <span class="s2">"Bike Rentals"</span><span class="p">,</span>
       <span class="s2">"subcategory_id"</span><span class="o">:</span> <span class="mi">18</span><span class="p">,</span>
       <span class="s2">"supplier_slug"</span><span class="o">:</span> <span class="s2">"homerun"</span><span class="p">,</span>
+      <span class="s2">"tags"</span><span class="o">:</span> <span class="p">[</span>
+        <span class="s2">"Adult"</span><span class="p">,</span>
+        <span class="s2">"Limited-time-only"</span>
+      <span class="p">],</span>
       <span class="s2">"title"</span><span class="o">:</span> <span class="s2">"1024 WSC Salon - Other - $39 for $100"</span><span class="p">,</span>
       <span class="s2">"type"</span><span class="o">:</span> <span class="s2">"daily-deal"</span><span class="p">,</span>
       <span class="s2">"value"</span><span class="o">:</span> <span class="mi">10000</span>
@@ -813,6 +820,10 @@
       <span class="s2">"subcategory"</span><span class="o">:</span> <span class="s2">"Comedy"</span><span class="p">,</span>
       <span class="s2">"subcategory_id"</span><span class="o">:</span> <span class="mi">3</span><span class="p">,</span>
       <span class="s2">"supplier_slug"</span><span class="o">:</span> <span class="s2">"homerun"</span><span class="p">,</span>
+      <span class="s2">"tags"</span><span class="o">:</span> <span class="p">[</span>
+        <span class="s2">"Adult"</span><span class="p">,</span>
+        <span class="s2">"Limited-time-only"</span>
+      <span class="p">],</span>
       <span class="s2">"title"</span><span class="o">:</span> <span class="s2">"test_CLO_CSV_5"</span><span class="p">,</span>
       <span class="s2">"type"</span><span class="o">:</span> <span class="s2">"card-linked"</span><span class="p">,</span>
       <span class="s2">"value"</span><span class="o">:</span> <span class="mi">100</span>
