--- a/v3/get_deals/index.html
+++ b/v3/get_deals/index.html
@@ -334,6 +334,9 @@ The list of attributes to be returned should be a comma separated list of fields
   <dt>supplier_id</dt>
   <dd>
 <em>String</em> Unique identifier for supplier of the deal</dd>
+  <dt>tags</dt>
+  <dd>
+<em>Array</em> An array of the tags associated with this deal</dd>
   <dt>title</dt>
   <dd>
 <em>String</em> Title of the purchased deal</dd>
@@ -429,6 +432,10 @@ The list of attributes to be returned should be a comma separated list of fields
       <span class="s2">"state"</span><span class="o">:</span> <span class="s2">"in-flight"</span><span class="p">,</span>
       <span class="s2">"subcategory"</span><span class="o">:</span> <span class="s2">"Bike Rentals"</span><span class="p">,</span>
       <span class="s2">"supplier_id"</span><span class="o">:</span> <span class="s2">"homerun"</span><span class="p">,</span>
+      <span class="s2">"tags"</span><span class="o">:</span> <span class="p">[</span>
+        <span class="s2">"Adult"</span><span class="p">,</span>
+        <span class="s2">"Limited-time-only"</span>
+      <span class="p">],</span>
       <span class="s2">"title"</span><span class="o">:</span> <span class="s2">"1024 WSC Salon - Other - $39 for $100"</span><span class="p">,</span>
       <span class="s2">"type"</span><span class="o">:</span> <span class="s2">"daily-deal"</span><span class="p">,</span>
       <span class="s2">"value"</span><span class="o">:</span> <span class="mi">10000</span>
@@ -493,6 +500,10 @@ The list of attributes to be returned should be a comma separated list of fields
       <span class="s2">"subcategory"</span><span class="o">:</span> <span class="s2">"Comedy"</span><span class="p">,</span>
       <span class="s2">"subcategory_id"</span><span class="o">:</span> <span class="s2">"comedy"</span><span class="p">,</span>
       <span class="s2">"supplier_id"</span><span class="o">:</span> <span class="s2">"homerun"</span><span class="p">,</span>
+      <span class="s2">"tags"</span><span class="o">:</span> <span class="p">[</span>
+        <span class="s2">"Adult"</span><span class="p">,</span>
+        <span class="s2">"Limited-time-only"</span>
+      <span class="p">],</span>
       <span class="s2">"title"</span><span class="o">:</span> <span class="s2">"test_CLO_CSV_5"</span><span class="p">,</span>
       <span class="s2">"type"</span><span class="o">:</span> <span class="s2">"card-linked"</span><span class="p">,</span>
       <span class="s2">"value"</span><span class="o">:</span> <span class="mi">100</span>
