--- a/v3/regions/deals/index.html
+++ b/v3/regions/deals/index.html
@@ -199,6 +199,10 @@ GET /regions/:city,:state/deals
       <span class="s2">"state"</span><span class="o">:</span> <span class="s2">"in-flight"</span><span class="p">,</span>
       <span class="s2">"subcategory"</span><span class="o">:</span> <span class="s2">"Bike Rentals"</span><span class="p">,</span>
       <span class="s2">"supplier_id"</span><span class="o">:</span> <span class="s2">"homerun"</span><span class="p">,</span>
+      <span class="s2">"tags"</span><span class="o">:</span> <span class="p">[</span>
+        <span class="s2">"Adult"</span><span class="p">,</span>
+        <span class="s2">"Limited-time-only"</span>
+      <span class="p">],</span>
       <span class="s2">"title"</span><span class="o">:</span> <span class="s2">"1024 WSC Salon - Other - $39 for $100"</span><span class="p">,</span>
       <span class="s2">"type"</span><span class="o">:</span> <span class="s2">"daily-deal"</span><span class="p">,</span>
       <span class="s2">"value"</span><span class="o">:</span> <span class="mi">10000</span>
