--- a/v1/adunits/index.html
+++ b/v1/adunits/index.html
@@ -119,19 +119,19 @@ If no deals are identified for the ad units, then a stand-by ad unit is rendered
 </ol><h2 id="x-250---business-name-percentage-off-image">300 x 250 - Business Name, Percentage off, Image</h2>
 <p><img src="/images/ad-unit-300-250.png" alt="Ad Unit 300x250"></p>
 
-<pre><code>&lt;script src="https://${partner_slug}-admin.offers.com/api/v1/adunits.js?widget_size=300"&gt;&lt;/script&gt;
+<pre><code>&lt;script src="https://${partner_slug}-admin.offers.deem.com/api/v1/adunits.js?widget_size=300"&gt;&lt;/script&gt;
 </code></pre>
 
 <h2 id="x-150---business-name-percentage-off-image">180 x 150 - Business Name, Percentage off, Image</h2>
 <p><img src="/images/ad-unit-180-150.png" alt="Ad Unit 180x150"></p>
 
-<pre><code>&lt;script src="https://${partner_slug}-admin.offers.com/api/v1/adunits.js?widget_size=180"&gt;&lt;/script&gt;
+<pre><code>&lt;script src="https://${partner_slug}-admin.offers.deem.com/api/v1/adunits.js?widget_size=180"&gt;&lt;/script&gt;
 </code></pre>
 
 <h2 id="x-90---business-name-percentage-off-image-description-call-to-action">728 x 90 - Business Name, Percentage off, Image, Description, Call to action</h2>
 <p><img src="/images/ad-unit-728-90.png" alt="Ad Unit 728x90"></p>
 
-<pre><code>&lt;script src="https://${partner_slug}-admin.offers.com/api/v1/adunits.js"&gt;&lt;/script&gt;
+<pre><code>&lt;script src="https://${partner_slug}-admin.offers.deem.com/api/v1/adunits.js"&gt;&lt;/script&gt;
 </code></pre>
 
 <h2 id="request-parameters">Request Parameters</h2>
