--- a/v3/get_deals/index.html
+++ b/v3/get_deals/index.html
@@ -184,7 +184,7 @@ The list of attributes to be returned should be a comma separated list of fields
 
 <p>The response JSON file contains a list of deal resources that meet the request filter parameters.</p>
 
-<h3 id="status-attributes">status attributes</h3>
+<h3 id="status-attributes">Status attributes</h3>
 
 <dl>
 <dt>status</dt>
@@ -363,6 +363,12 @@ The list of attributes to be returned should be a comma separated list of fields
   <dt>value</dt>
   <dd>
 <em>Integer</em> The value of the deal in cents</dd>
+</dl><h3 id="pagination-attributes">Pagination attributes</h3>
+
+<dl>
+<dt>next_page</dt>
+  <dd>
+<em>String</em> The URL for the next page of deals.</dd>
 </dl><h2 id="response-examples">Response Examples</h2>
 
 <h3 id="filter-deals-by-the-losangeles-region-with-two-deals-returned">Filter deals by the “los_angeles” region with two deals returned:</h3>
