--- a/v3/get_deals/index.html
+++ b/v3/get_deals/index.html
@@ -207,6 +207,9 @@ The list of attributes to be returned should be a comma separated list of fields
   <dt>category_id</dt>
   <dd>
 <em>String</em> Unique identifier for category the deal is in</dd>
+  <dt>cost</dt>
+  <dd>
+<em>Integer</em> The cost of the deal in cents</dd>
   <dt>description1</dt>
   <dd>
 <em>String</em> Primary description of the deal</dd>
@@ -278,6 +281,9 @@ The list of attributes to be returned should be a comma separated list of fields
   <dt>maximum_allowance</dt>
   <dd>
 <em>Integer</em> The maximum value of a deal purchase (only for card-linked deals)</dd>
+  <dt>merchant_id</dt>
+  <dd>
+<em>String</em> Unique identifier for the merchant offering the deal</dd>
   <dt>merchant_name</dt>
   <dd>
 <em>String</em> Name of the merchant of the deal</dd>
@@ -379,7 +385,6 @@ The list of attributes to be returned should be a comma separated list of fields
   <span class="s2">"deals"</span><span class="o">:</span> <span class="p">[</span>
     <span class="p">{</span>
       <span class="s2">"id"</span><span class="o">:</span> <span class="s2">"la-1024-wsc-hair-studio-01-2"</span><span class="p">,</span>
-      <span class="s2">"address_id"</span><span class="o">:</span> <span class="s2">"8a23af0847"</span><span class="p">,</span>
       <span class="s2">"campaign"</span><span class="o">:</span> <span class="kc">null</span><span class="p">,</span>
       <span class="s2">"category"</span><span class="o">:</span> <span class="s2">"Activities"</span><span class="p">,</span>
       <span class="s2">"category_id"</span><span class="o">:</span> <span class="s2">"activities"</span><span class="p">,</span>
@@ -405,6 +410,7 @@ The list of attributes to be returned should be a comma separated list of fields
       <span class="s2">"locations"</span><span class="o">:</span> <span class="p">[</span>
         <span class="p">{</span>
           <span class="s2">"address"</span><span class="o">:</span> <span class="p">{</span>
+            <span class="s2">"address_id"</span><span class="o">:</span> <span class="s2">"8a23af0847"</span><span class="p">,</span>
             <span class="s2">"region"</span><span class="o">:</span> <span class="s2">"CA"</span><span class="p">,</span>
             <span class="s2">"postal_code"</span><span class="o">:</span> <span class="s2">"90057"</span><span class="p">,</span>
             <span class="s2">"street"</span><span class="o">:</span> <span class="s2">"671 la fayette park place"</span><span class="p">,</span>
@@ -449,7 +455,6 @@ The list of attributes to be returned should be a comma separated list of fields
     <span class="p">},</span>
     <span class="p">{</span>
       <span class="s2">"id"</span><span class="o">:</span> <span class="s2">"den-621-rel-merchant-4"</span><span class="p">,</span>
-      <span class="s2">"address_id"</span><span class="o">:</span> <span class="s2">"8a23af0847"</span><span class="p">,</span>
       <span class="s2">"campaign"</span><span class="o">:</span> <span class="kc">null</span><span class="p">,</span>
       <span class="s2">"category"</span><span class="o">:</span> <span class="s2">"Activities"</span><span class="p">,</span>
       <span class="s2">"category_id"</span><span class="o">:</span> <span class="s2">"activities"</span><span class="p">,</span>
@@ -475,6 +480,7 @@ The list of attributes to be returned should be a comma separated list of fields
       <span class="s2">"locations"</span><span class="o">:</span> <span class="p">[</span>
         <span class="p">{</span>
           <span class="s2">"address"</span><span class="o">:</span> <span class="p">{</span>
+            <span class="s2">"address_id"</span><span class="o">:</span> <span class="s2">"8a23af0847"</span><span class="p">,</span>
             <span class="s2">"region"</span><span class="o">:</span> <span class="s2">"Colorado"</span><span class="p">,</span>
             <span class="s2">"postal_code"</span><span class="o">:</span> <span class="s2">"80234"</span><span class="p">,</span>
             <span class="s2">"street"</span><span class="o">:</span> <span class="s2">"7072 North Mariposa Court"</span><span class="p">,</span>
