--- a/v3/get_deals/index.html
+++ b/v3/get_deals/index.html
@@ -157,7 +157,7 @@ The list of attributes to be returned should be a comma separated list of fields
 <dl>
 <dt>price</dt>
   <dd>
-<em>Optional Integer</em> : Filter the deal price in cents (i.e., 100 equals one dollar). Can be used in conjunction with “&lt;”, “&gt;”, “=” and combinations thereof using for instance ?filter=price&gt;=1500. Multiple exact price matches can be selected using ?filter=price[1300,1500]</dd>
+<em>Optional Integer</em> : Filter the deal price in cents (i.e., 100 equals one dollar). Can be used in conjunction with “&lt;”, “&gt;”, “=” and combinations thereof using for instance ?filter=price&gt;=1500. Multiple exact price matches can be selected using ?filter=price[1300,1500].</dd>
 </dl><h3 id="location-parameters">Location parameters</h3>
 
 <dl>
@@ -166,16 +166,16 @@ The list of attributes to be returned should be a comma separated list of fields
 <em>Optional String</em> : Filter deals by region_id. Can be used in conjunction with “[]”. To select all deals from multiple regions, use ?filter=region[san-francisco,atlanta].</dd>
   <dt>region_city</dt>
   <dd>
-<em>Optional String</em> : Filter deals by region city. Can be used in conjunction with “[]”. To select a deals from multiple region cities, use ?filter=region_city[san%20francisco,los%20angeles].</dd>
+<em>Optional String</em> : Filter deals by city within two character state. Should be nested within “[]”. Use?filter=region_city[san%20francisco,ca]. To select deals from multiple region cities, nest the selection array within an outer array. Use ?filter=region_city[[san%20francisco,ca],[los%20angeles,ca]].</dd>
   <dt>lat_long</dt>
   <dd>
-<em>Optional String</em> : Filter deals by location using latitude, longitude and radius in miles. Use ?filter=lat_long[123.1112,-321.1132,5]</dd>
+<em>Optional String</em> : Filter deals by location using latitude, longitude and radius in miles. Use ?filter=lat_long[123.1112,-321.1132,5].</dd>
 </dl><h3 id="inventory-parameters">Inventory parameters</h3>
 
 <dl>
 <dt>sold_out</dt>
   <dd>
-<em>Optional Boolean</em> : Filter deals that are either sold_out or not sold_out. Use ?filter=sold_out[false] to select deals that are not sold_out</dd>
+<em>Optional Boolean</em> : Filter deals that are either sold_out or not sold_out. Use ?filter=sold_out[false] to select deals that are not sold_out.</dd>
 </dl><h2 id="response">Response</h2>
 
 <p>The response includes the HTTP status of the request along with the associated response data provided in a JSON file.</p>
