--- a/v1/users/credit_cards/index.html
+++ b/v1/users/credit_cards/index.html
@@ -169,6 +169,9 @@
   <dt>year</dt>
   <dd>
 <em>Integer</em> Expiration year in digit format.</dd>
+  <dt>zip_code</dt>
+  <dd>
+<em>String</em> The zip code for the billing address for the card.</dd>
 </dl><h3 id="response-1">Response</h3>
 
 <pre class="headers"><code>Status: 200 OK</code></pre>
