--- a/v1/quick_start/index.html
+++ b/v1/quick_start/index.html
@@ -332,9 +332,10 @@
   <span class="p">},</span>
   <span class="s2">"credit_card"</span><span class="o">:</span> <span class="p">{</span>
     <span class="s2">"number"</span><span class="o">:</span> <span class="s2">"424242424242424"</span><span class="p">,</span>
-    <span class="s2">"cvv"</span><span class="o">:</span> <span class="mi">123</span><span class="p">,</span>
+    <span class="s2">"verification_value"</span><span class="o">:</span> <span class="mi">123</span><span class="p">,</span>
     <span class="s2">"month"</span><span class="o">:</span> <span class="mi">1</span><span class="p">,</span>
-    <span class="s2">"year"</span><span class="o">:</span> <span class="mi">2014</span>
+    <span class="s2">"year"</span><span class="o">:</span> <span class="mi">2014</span><span class="p">,</span>
+    <span class="s2">"zip_code"</span><span class="o">:</span> <span class="s2">"90210"</span>
   <span class="p">},</span>
   <span class="s2">"shipping_address"</span><span class="o">:</span> <span class="p">{</span>
     <span class="s2">"address_one"</span><span class="o">:</span> <span class="s2">"501 Howard St"</span><span class="p">,</span>
