--- a/v3/get_deals/index.html
+++ b/v3/get_deals/index.html
@@ -308,6 +308,9 @@ The list of attributes to be returned should be a comma separated list of fields
   <dt>purchase_url</dt>
   <dd>
 <em>String</em> The URL for deal purchase web page</dd>
+  <dt>redemption_url</dt>
+  <dd>
+<em>String</em> The URL a purchaser will redeem the coupon/redemption code</dd>
   <dt>region_id</dt>
   <dd>
 <em>String</em> Unique identifier for region in which the deal is for sale</dd>
