--- a/v1/core/index.html
+++ b/v1/core/index.html
@@ -78,7 +78,6 @@
           <li><a href="/v1/purchases/">Purchases</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/regions/">Regions</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/regions/deals/">Region Deals</a><span class="icon-arrow-right"></span></li>
-          <li><a href="/v3/regions/deals/">V3 Region Deals</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/users/">Users</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/users/access_tokens/">User Access Tokens</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/users/card_links/">User Card Links</a><span class="icon-arrow-right"></span></li>
@@ -109,14 +108,17 @@
 <p>Use this call to get a list of deals currently available for sale.</p>
 
 <ul>
-<li><a href="/v1/get_deals/">Get Deals</a></li>
-</ul><h2 id="execute-purchases">Execute Purchases</h2>
+  <li><a href="/v1/get_deals/">Get Deals</a></li>
+</ul>
+
+<h2 id="execute-purchases">Execute Purchases</h2>
 
 <p>Use this call to make deal purchases. </p>
 
 <ul>
-<li><a href="/v1/full_purchase/">Execute Purchases</a></li>
+  <li><a href="/v1/full_purchase/">Execute Purchases</a></li>
 </ul>
+
       </div>
 
     </div>
