--- a/v1/stats/merchants/index.html
+++ b/v1/stats/merchants/index.html
@@ -78,7 +78,6 @@
           <li><a href="/v1/purchases/">Purchases</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/regions/">Regions</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/regions/deals/">Region Deals</a><span class="icon-arrow-right"></span></li>
-          <li><a href="/v3/regions/deals/">V3 Region Deals</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/users/">Users</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/users/access_tokens/">User Access Tokens</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/users/card_links/">User Card Links</a><span class="icon-arrow-right"></span></li>
@@ -103,8 +102,10 @@
         <h1 id="merchants">Merchants</h1>
 
 <ul>
-<li><a href="/v1/stats/merchants#merchants">Get merchant stats</a></li>
-</ul><h2 id="get-merchant-stats">Get merchant stats</h2>
+  <li><a href="/v1/stats/merchants#merchants">Get merchant stats</a></li>
+</ul>
+
+<h2 id="get-merchant-stats">Get merchant stats</h2>
 <p>Returns a csv file of all the merchants.</p>
 
 <pre><code>GET /stats/merchants
@@ -113,6 +114,7 @@
 <h3 id="response">Response</h3>
 
 <pre class="headers"><code>Status: 200 OK</code></pre>
+
       </div>
 
     </div>
