--- a/v3/resellers/coupons/index.html
+++ b/v3/resellers/coupons/index.html
@@ -78,7 +78,6 @@
           <li><a href="/v1/purchases/">Purchases</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/regions/">Regions</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/regions/deals/">Region Deals</a><span class="icon-arrow-right"></span></li>
-          <li><a href="/v3/regions/deals/">V3 Region Deals</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/users/">Users</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/users/access_tokens/">User Access Tokens</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/users/card_links/">User Card Links</a><span class="icon-arrow-right"></span></li>
@@ -103,9 +102,11 @@
         <h1 id="reseller-coupons">Reseller Coupons</h1>
 
 <ul>
-<li><a href="/v3/resellers/coupons/#check-coupon-status">Check the status of a coupon</a></li>
+  <li><a href="/v3/resellers/coupons/#check-coupon-status">Check the status of a coupon</a></li>
   <li><a href="/v3/resellers/coupons/#cancel-coupon">Cancel coupon</a></li>
-</ul><h2 id="check-coupon-status">Check coupon status</h2>
+</ul>
+
+<h2 id="check-coupon-status">Check coupon status</h2>
 
 <p>Endpoint for a third party reseller to check the status of a coupon.</p>
 
@@ -191,6 +192,7 @@
     <span class="p">]</span>
   <span class="p">}</span>
 <span class="p">}</span></code></pre>
+
       </div>
 
     </div>
