--- a/v1/changelog/index.html
+++ b/v1/changelog/index.html
@@ -78,7 +78,6 @@
           <li><a href="/v1/purchases/">Purchases</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/regions/">Regions</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/regions/deals/">Region Deals</a><span class="icon-arrow-right"></span></li>
-          <li><a href="/v3/regions/deals/">V3 Region Deals</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/users/">Users</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/users/access_tokens/">User Access Tokens</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/users/card_links/">User Card Links</a><span class="icon-arrow-right"></span></li>
@@ -117,8 +116,11 @@
 <h3 id="expected-changes">Expected Changes</h3>
 
 <ul>
-<li>Stuff here</li>
-</ul><h2 id="breaking-changes">Breaking Changes</h2>
+  <li>Stuff here</li>
+</ul>
+
+<h2 id="breaking-changes">Breaking Changes</h2>
+
       </div>
 
     </div>
