--- a/v1/errors/index.html
+++ b/v1/errors/index.html
@@ -78,7 +78,6 @@
           <li><a href="/v1/purchases/">Purchases</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/regions/">Regions</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/regions/deals/">Region Deals</a><span class="icon-arrow-right"></span></li>
-          <li><a href="/v3/regions/deals/">V3 Region Deals</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/users/">Users</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/users/access_tokens/">User Access Tokens</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/users/card_links/">User Card Links</a><span class="icon-arrow-right"></span></li>
@@ -113,7 +112,7 @@
 <h2 id="http-status-code-summary">HTTP Status Code Summary</h2>
 
 <ul>
-<li>
+  <li>
     <p><b>200</b> OK - Everything worked as expected.</p>
   </li>
   <li>
@@ -137,10 +136,12 @@
   <li>
     <p><b>500, 502, 503, 504</b> Server errors - something went wrong on an OfferEngine server.</p>
   </li>
-</ul><h2 id="error-types">Error Types</h2>
+</ul>
+
+<h2 id="error-types">Error Types</h2>
 
 <ul>
-<li>
+  <li>
     <p><b>auth_failed</b> - key provided does not match an active api key</p>
   </li>
   <li>
@@ -161,7 +162,9 @@
   <li>
     <p><b>redeem_failed</b> - voucher could not be found or is already redeemed</p>
   </li>
-</ul><h2 id="error-message">Error Message</h2>
+</ul>
+
+<h2 id="error-message">Error Message</h2>
 
 <p>Field providing a human readable explanation of the error that occurred </p>
 
@@ -184,6 +187,7 @@
   <span class="s2">"error_type"</span><span class="o">:</span> <span class="s2">"find_failed"</span><span class="p">,</span>
   <span class="s2">"error_msg"</span><span class="o">:</span> <span class="s2">"Unable to find"</span>
 <span class="p">}</span></code></pre>
+
       </div>
 
     </div>
