--- a/v1/regions/index.html
+++ b/v1/regions/index.html
@@ -78,7 +78,6 @@
           <li><a href="/v1/purchases/">Purchases</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/regions/">Regions</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/regions/deals/">Region Deals</a><span class="icon-arrow-right"></span></li>
-          <li><a href="/v3/regions/deals/">V3 Region Deals</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/users/">Users</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/users/access_tokens/">User Access Tokens</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/users/card_links/">User Card Links</a><span class="icon-arrow-right"></span></li>
@@ -103,9 +102,11 @@
         <h1 id="regions">Regions</h1>
 
 <ul>
-<li><a href="/v1/regions/#get-a-region">Get a region</a></li>
+  <li><a href="/v1/regions/#get-a-region">Get a region</a></li>
   <li><a href="/v1/regions/#list-all-regions">List all regions</a></li>
-</ul><h2 id="get-a-region">Get a region</h2>
+</ul>
+
+<h2 id="get-a-region">Get a region</h2>
 
 <pre><code>GET /api/v1/regions/:region_id
 </code></pre>
@@ -143,6 +144,7 @@
     <span class="p">}</span>
   <span class="p">]</span>
 <span class="p">}</span></code></pre>
+
       </div>
 
     </div>
