--- a/v3/resellers/purchases/index.html
+++ b/v3/resellers/purchases/index.html
@@ -78,7 +78,6 @@
           <li><a href="/v1/purchases/">Purchases</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/regions/">Regions</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/regions/deals/">Region Deals</a><span class="icon-arrow-right"></span></li>
-          <li><a href="/v3/regions/deals/">V3 Region Deals</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/users/">Users</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/users/access_tokens/">User Access Tokens</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/users/card_links/">User Card Links</a><span class="icon-arrow-right"></span></li>
@@ -103,8 +102,10 @@
         <h1 id="purchases">Purchases</h1>
 
 <ul>
-<li><a href="/v3/resellers/purchases/#create-a-purchase">Create a purchase</a></li>
-</ul><p>Endpoint to create purchases for a third party reseller.  This api is only to
+  <li><a href="/v3/resellers/purchases/#create-a-purchase">Create a purchase</a></li>
+</ul>
+
+<p>Endpoint to create purchases for a third party reseller.  This api is only to
 be used if the transaction is completely managed by the third party.</p>
 
 <h2 id="create-a-purchase">Create a purchase</h2>
@@ -118,16 +119,18 @@ be used if the transaction is completely managed by the third party.</p>
 
 <h4 id="daily-deal-or-on-going-deals">Daily Deal or On Going deals</h4>
 <ul>
-<li>deal_id</li>
+  <li>deal_id</li>
   <li>quantity</li>
   <li>transaction_reference</li>
   <li>transaction_date</li>
   <li>transaction_amount</li>
   <li>first_name</li>
   <li>last_name</li>
-</ul><h4 id="shipped">Shipped</h4>
+</ul>
+
+<h4 id="shipped">Shipped</h4>
 <ul>
-<li>deal_id</li>
+  <li>deal_id</li>
   <li>quantity</li>
   <li>transaction_reference</li>
   <li>transaction_date</li>
@@ -142,19 +145,23 @@ be used if the transaction is completely managed by the third party.</p>
   <li>state</li>
   <li>country</li>
   <li>telephone</li>
-</ul><h4 id="card-linked">Card Linked</h4>
+</ul>
+
+<h4 id="card-linked">Card Linked</h4>
 <ul>
-<li>deal_id</li>
+  <li>deal_id</li>
   <li>transaction_reference</li>
   <li>transaction_date</li>
   <li>transaction_amount</li>
-</ul><h3 id="available-fields">Available Fields</h3>
+</ul>
+
+<h3 id="available-fields">Available Fields</h3>
 
 <p>The following fields may be included in any purchase request.  All fields sent will be used,
 though they may have little to no meaning for some requests.</p>
 
 <dl>
-<dt>deal_id</dt>
+  <dt>deal_id</dt>
   <dd>
 <em>String</em> The id of the deal that was purchased</dd>
   <dt>transaction_reference</dt>
@@ -198,7 +205,9 @@ though they may have little to no meaning for some requests.</p>
   <dt>telephone</dt>
   <dd>
 <em>String</em> The telephone number of the user that made the purchase</dd>
-</dl><h3 id="card-linked-request-example">Card Linked Request Example</h3>
+</dl>
+
+<h3 id="card-linked-request-example">Card Linked Request Example</h3>
 
 <pre class="headers"><code>POST https://&lt;username&gt;:&lt;password&gt;@api.offers.deem.com/api/v3/resellers/purchases.json</code></pre>
 
@@ -284,11 +293,13 @@ though they may have little to no meaning for some requests.</p>
 <h3 id="section">422</h3>
 
 <dl>
-<dt>error_type = “cannot_fulfill”</dt>
+  <dt>error_type = “cannot_fulfill”</dt>
   <dd>Not able to fulfill the purchase</dd>
   <dt>error_type = “validations_failed”</dt>
   <dd>Validation failed, which can be five failure types (“missing_field”, “missing”, “invalid”, “not_owner”, and “not_found”). Each type also has the associated resource that caused the error (“purchase”) and may also have a field narrowing down the specific attribute if applicable.</dd>
-</dl><h2 id="error-response-example">Error Response Example</h2>
+</dl>
+
+<h2 id="error-response-example">Error Response Example</h2>
 
 <h3 id="validation-errors-for-purchase-only">Validation errors for purchase only</h3>
 
@@ -330,6 +341,7 @@ though they may have little to no meaning for some requests.</p>
     <span class="p">}</span>
   <span class="p">]</span>
 <span class="p">}</span></code></pre>
+
       </div>
 
     </div>
